chore: use custom ktlint-rules from repo tools (#1018)